--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-adium-theme-ubuntu==0.3.4
+click==6.6
+codeclimate-test-reporter==0.1.2
+coverage==4.2
+Django==1.10.2
+Flask==0.11.1
 gunicorn==19.6.0
-pygobject==3.20.0
-unity-lens-photos==1.0
-virtualenv==15.0.3
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+PyYAML==3.12
+requests==2.11.1
+Werkzeug==0.11.11
